--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
+/* Select all elements to have following properties */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* background color for body element */
 body {
     background-color: #d9dcd6;
 }
@@ -15,6 +17,7 @@ body {
     color: #ffffff;
 }
 
+/* background color for body element */
 .header h1 {
     display: inline-block;
     font-size: 48px;
@@ -24,6 +27,7 @@ body {
     color: #d9dcd6;
 }
 
+/* Properties for div elements inside of header class (children elements) */
 .header div {
     padding-top: 15px;
     margin-right: 20px;
@@ -41,6 +45,7 @@ body {
     margin-left: 25px;
 }
 
+/* element selector properties */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -50,6 +55,7 @@ p {
     font-size: 16px;
 }
 
+/* Set hero class with following properties */
 .hero {
     height: 800px;
     width: 100%;
@@ -59,11 +65,13 @@ p {
     background-position: center;
 }
 
+/* Adjust image location starting from the left */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
+/* Adjust image location starting from the right */
 .float-right {
     float: right;
     margin-left: 25px;
@@ -75,6 +83,7 @@ p {
     margin-left: 20px;
 }
 
+/* Properties for benefits class */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -96,6 +105,7 @@ p {
     color: #ffffff;
 }
 
+/* Properties for benefits-cost class */
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
@@ -106,6 +116,7 @@ p {
     text-align: center;
 }
 
+/* Properties for h3 element inside of benefit-brand class parent class */
 .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -134,6 +145,7 @@ p {
     max-width: 150px;
 }
 
+/* Properties for search engine optimization class */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -173,6 +185,7 @@ p {
     max-height: 200px;
 }
 
+/* Properties for h2 element inside of search engine optimization class */
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -188,6 +201,7 @@ p {
     font-size: 36px;
 }
 
+/* Properties for footer class */
 .footer {
     padding: 30px;
     clear: both;
